--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="footer">
         <div class="first-line">
-            Vietnam
+            이은지
         </div>
         <div class="second-line">
             <span>
